# senio_robot

./: README.md
senio_controllers/: .clang-format  CMakeLists.txt  arthropod_controller_plugin.xml  package.xml
senio_controllers/config/: controllers.yaml
senio_controllers/include/cartesian_trajectory_controller/: cartesian_trajectory_controller.hpp  control_policies.hpp
senio_controllers/include/inverse_kinematics/: ik_solver_base.h
senio_controllers/include/senio_controllers/: arthropod_controller.hpp  cartesian_trajectory_leg_controller.hpp  gait_member.hpp  gait_pattern.hpp  gait_predictor.hpp  gait_trajectory.hpp  ground_estimator.hpp
senio_controllers/launch/: senio_controllers.launch  static_pose_server.launch
senio_controllers/scripts/: static_cartesian_server.py  static_pose_server.py
senio_controllers/src/: arthropod_controller.cpp
senio_deployment/: CMakeLists.txt  package.xml
senio_description/: CMakeLists.txt  package.xml
senio_description/launch/: display.launch  robot.launch
senio_description/urdf/: senio_robot.urdf.xacro
senio_description/urdf/assemblies/: arm.urdf.xacro
senio_description/urdf/parts/: body.urdf.xacro  elbow.urdf.xacro  shoulder.urdf.xacro  wrist.urdf.xacro
senio_gazebo/: CMakeLists.txt  package.xml
senio_gazebo/launch/: senio_gazebo.launch
senio_hardware/: CMakeLists.txt  package.xml
senio_hardware/config/: control.yaml
senio_hardware/include/senio_hardware/: joint.hpp  senio_hardware_interface.hpp
senio_hardware/launch/: senio_hardware.launch
senio_hardware/scripts/: onetalker.py  zerotalker.py
senio_hardware/src/: senio_hardware_interface.cpp  senio_hardware_node.cpp
senio_msgs/: CMakeLists.txt  package.xml
senio_robot/: CMakeLists.txt  package.xml
