<?xml version="1.0"?>
<package format="2">
  <name>senio_controllers</name>
  <version>0.0.1</version>
  <description>The senio_controllers package</description>

  <maintainer email="mik-p@github.com">mik-p</maintainer>

  <license>MIT</license>

  <author email="mik-p@github.com">mik-p</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>tf2</depend>
  <depend>tf2_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>kdl_parser</depend>
  <depend>realtime_tools</depend>
  <depend>controller_interface</depend>
  <depend>joint_state_controller</depend>
  <depend>position_controllers</depend>
  <depend>joint_trajectory_controller</depend>
  <depend>inverse_kinematics</depend>
  <depend>cartesian_trajectory_controller</depend>
  <depend>cartesian_trajectory_interpolation</depend>

  <depend>senio_msgs</depend>

  <exec_depend>senio_description</exec_depend>
  <exec_depend>senio_hardware</exec_depend>

  <export>
  </export>
</package>
